--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "flatlist-react": "^1.5.13",
+    "haversine-distance": "^1.2.1",
     "jwt-decode": "^3.1.2",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
+    "luxon": "^3.3.0",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -57,6 +59,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.191",
+    "@types/luxon": "^3.2.0",
     "@types/uuid": "^9.0.1"
   }
 }
